header behind navbar fix

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -4,6 +4,10 @@
 @import url(https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap);
 
 
+.scroll-fix {
+  scroll-margin-top: 64px
+}
+
 #helloguys {
   display: none;
 }
